--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -17,7 +17,7 @@
         <item
             android:id="@+id/nav_sponsors"
             android:icon="@drawable/ic_sponsor_drawer"
-            android:title="@string/menu_speakers"/>
+            android:title="@string/menu_sponsor"/>
         <item
             android:id="@+id/nav_map"
             android:icon="@drawable/ic_map_grey600_24dp"
