speaker fragment done

--- a/app/src/main/res/layout/list_tracks.xml
+++ b/app/src/main/res/layout/list_tracks.xml
@@ -6,7 +6,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_tracks"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:elevation="7dp"
+        android:scrollbars="vertical">
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
