--- a/app/src/main/res/layout-v21/speakers_item.xml
+++ b/app/src/main/res/layout-v21/speakers_item.xml
@@ -1,10 +1,15 @@
 <android.support.v7.widget.CardView
     android:id="@+id/card_tracks"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="180dp"
     android:layout_gravity="center"
-    android:layout_margin="16dp">
+    android:layout_margin="16dp"
+    android:clickable="true"
+    android:elevation="12dp"
+    app:cardBackgroundColor="#d3d3d3"
+    app:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
