--- a/app/src/main/res/layout-v21/speakers_item.xml
+++ b/app/src/main/res/layout-v21/speakers_item.xml
@@ -44,7 +44,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.5"
                     android:gravity="center_vertical"
-                    android:text="placeholder_speaker_name"
+                    android:text="speaker_name"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textColor="#000000"
                     android:textStyle="bold"/>
@@ -55,7 +55,7 @@
                     android:layout_height="0dp"
                     android:layout_weight="0.5"
                     android:gravity="top"
-                    android:text="placeholder_speaker_designation"
+                    android:text="speaker_designation"
                     android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="#000000"
                     android:textStyle="bold"/>
@@ -73,7 +73,7 @@
                 android:layout_width="326dp"
                 android:layout_height="64dp"
                 android:layout_margin="10dp"
-                android:text="placeholder_speaker_bio"
+                android:text="speaker_bio"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#000000"/>
         </RelativeLayout>
