--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:background="?attr/colorPrimary"
             android:layout_height="?attr/actionBarSize"/>
 
         <android.support.v4.widget.DrawerLayout
