--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#fdfdfd</color>
+    <color name="color_primary">#ffbb33</color>
     <color name="color_primary_dark">#fdfdfd</color>
     <color name="color_accent">#fdfdfd</color>
     <color name="fosdem_blue_translucent">#663479c4</color>
