--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="menu_main">16dp</dimen>
@@ -15,6 +14,7 @@
     <dimen name="toolbar_elevation">8dp</dimen>
     <dimen name="schedule_column_width">360dp</dimen>
     <dimen name="detail_card_view_elevation">6dp</dimen>
+    <dimen name="detail_backdrop_height">256dp</dimen>
 
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
          https://developer.android.com/design/patterns/navigation-drawer.html -->
