--- a/app/src/main/res/layout-v21/list_speakers.xml
+++ b/app/src/main/res/layout-v21/list_speakers.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="7dp">
+                android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_tracks"
+        android:id="@+id/rv_speakers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:paddingBottom="30dp"
+        android:elevation="7dp"
         android:scrollbars="vertical">
     </android.support.v7.widget.RecyclerView>
 
