--- a/app/src/main/res/layout-v21/list_tracks.xml
+++ b/app/src/main/res/layout-v21/list_tracks.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="false"
-        android:paddingBottom="30dp"
+        android:elevation="7dp"
         android:scrollbars="vertical">
     </android.support.v7.widget.RecyclerView>
 
