--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,15 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#ffbb33</color>
-    <color name="color_primary_dark">#ffbb33</color>
-    <color name="color_accent">#ffbb33</color>
-    <color name="fosdem_blue_translucent">#663479c4</color>
-    <color name="secondary_text">#323232</color>
-    <color name="main_menu_background">#ffbb33</color>
-    <color name="translucent_grey">#0c000000</color>
-    <color name="schedule_time_background">#29000000</color>
-    <color name="schedule_time_foreground">#000</color>
-    <color name="schedule_time_running_background">#ffbb33</color>
-    <color name="schedule_time_running_foreground">#ffbb33</color>
-    <color name="venue_attribute_value">#797676</color>
+    <color name="color_primary">#FFC107</color>
+    <color name="color_primary_dark">#FF8F00</color>
+    <color name="color_accent">#FFF8E1</color>
 </resources>
