--- a/app/src/main/res/layout/tracksactvity_item.xml
+++ b/app/src/main/res/layout/tracksactvity_item.xml
@@ -4,24 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
     android:background="@drawable/ripple"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_tracks"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_tracks1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="2dp"
-        android:background="@drawable/ripple"
-        card_view:cardBackgroundColor="#FFFFFF"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="8dp"
-        card_view:cardUseCompatPadding="true">
+        android:layout_marginBottom="@dimen/card_margin"
+        android:layout_marginLeft="@dimen/card_margin"
+        android:layout_marginRight="@dimen/card_margin">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                       android:layout_width="match_parent"
