--- a/app/src/main/res/menu/menu_tracks.xml
+++ b/app/src/main/res/menu/menu_tracks.xml
@@ -1,3 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
+      tools:context=".MainActivity">
+    <item
+        android:id="@+id/refresh_tracks"
+        android:icon="@drawable/ic_sync_white_24dp"
+        android:menuCategory="secondary"
+        android:title="Refresh"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_search_tracks"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always"/>
 </menu>
