fixed merge conflicts

--- a/app/src/main/res/menu/menu_sponsors.xml
+++ b/app/src/main/res/menu/menu_sponsors.xml
@@ -3,8 +3,8 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/refresh_sponsors"
-        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_sync_white_24dp"
         android:menuCategory="secondary"
-        android:title="Refresh"/>
+        android:title="Refresh"
+        app:showAsAction="ifRoom"/>
 </menu>
