--- a/app/src/main/res/menu/menu_speakers_activity.xml
+++ b/app/src/main/res/menu/menu_speakers_activity.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/share_speakers"
-        app:showAsAction="collapseActionView|ifRoom"
         android:icon="@drawable/ic_share_white_24dp"
-        android:title="@string/share"/>
+        android:title="@string/share"
+        app:showAsAction="collapseActionView|ifRoom"/>
 </menu>
