--- a/app/src/main/res/layout/tracks_item.xml
+++ b/app/src/main/res/layout/tracks_item.xml
@@ -4,9 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="2dp"
-    android:layout_marginTop="2dp"
-    android:background="@drawable/ripple"
+    android:layout_marginBottom="@dimen/card_margin_vertical"
+    android:layout_marginTop="@dimen/card_margin_vertical"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
@@ -23,7 +22,6 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/ripple"
             android:orientation="vertical">
 
             <LinearLayout
