--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,6 +17,7 @@
     <dimen name="detail_backdrop_height">256dp</dimen>
     <dimen name="heading_text_size">18sp</dimen>
     <dimen name="card_margin">16dp</dimen>
+    <dimen name="card_margin_vertical">4dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
     <!-- Per the design guidelines, navigation drawers should be between 240dp and 320dp:
