--- a/app/src/main/res/menu/menu_session_detail.xml
+++ b/app/src/main/res/menu/menu_session_detail.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/add_bookmark"
-        android:icon="@drawable/ic_event_add_white_24dp"
+        android:id="@+id/bookmark_status"
         android:menuCategory="secondary"
-        android:title="Bookmark"
+        android:title="@string/menu_bookmarks"
         app:showAsAction="ifRoom"/>
 </menu>
