--- a/app/src/main/res/layout/tracksactvity_item.xml
+++ b/app/src/main/res/layout/tracksactvity_item.xml
@@ -3,22 +3,23 @@
     android:id="@+id/ll_tracks"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginTop="6dp"
     android:layout_height="match_parent"
+    android:layout_marginTop="6dp"
     android:orientation="vertical">
+
     <android.support.v7.widget.CardView
         android:id="@+id/card_tracks1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/card_margin_vertical"
-        android:layout_marginTop="@dimen/card_margin_vertical"
         android:layout_marginLeft="@dimen/card_margin"
-        android:layout_marginRight="@dimen/card_margin">
+        android:layout_marginRight="@dimen/card_margin"
+        android:layout_marginTop="@dimen/card_margin_vertical">
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout style="@style/Widget.CardContent"
+                      xmlns:android="http://schemas.android.com/apk/res/android"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
-                      style="@style/Widget.CardContent"
                       android:orientation="vertical">
 
             <TextView
