--- a/app/src/main/res/menu/menu_speakers_activity.xml
+++ b/app/src/main/res/menu/menu_speakers_activity.xml
@@ -6,4 +6,11 @@
         android:icon="@drawable/ic_share_white_24dp"
         android:title="@string/share"
         app:showAsAction="collapseActionView|ifRoom"/>
+
+    <item
+        android:id="@+id/search_sessions"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/search"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always"/>
 </menu>
