--- a/app/src/fdroid/res/layout/fragment_map.xml
+++ b/app/src/fdroid/res/layout/fragment_map.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:id="@+id/map"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/map"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,6 +9,5 @@
         android:id="@+id/mapview"
         tilesource="Cyclemap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 </FrameLayout>
