--- a/app/src/main/res/layout/activity_speakers.xml
+++ b/app/src/main/res/layout/activity_speakers.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.Toolbar
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/color_primary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,9 +18,9 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_speaker"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_speaker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -29,8 +29,7 @@
             card_view:cardElevation="4dp"
             card_view:cardUseCompatPadding="true">
 
-            <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="2dp"
@@ -43,7 +42,7 @@
                     android:layout_height="wrap_content"
                     android:text="Biography"
                     android:textColor="#000000"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -61,7 +60,7 @@
                         android:clickable="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/linkedin"
-                        android:tag="@string/linkedin"/>
+                        android:tag="@string/linkedin" />
 
                     <ImageView
                         android:id="@+id/imageView_twitter"
@@ -72,7 +71,7 @@
                         android:clickable="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/twitter"
-                        android:tag="@string/twitter"/>
+                        android:tag="@string/twitter" />
 
                     <ImageView
                         android:id="@+id/imageView_fb"
@@ -83,7 +82,7 @@
                         android:clickable="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/facebook"
-                        android:tag="@string/fb"/>
+                        android:tag="@string/fb" />
 
                     <ImageView
                         android:id="@+id/imageView_github"
@@ -94,7 +93,7 @@
                         android:clickable="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/github"
-                        android:tag="@string/github"/>
+                        android:tag="@string/github" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -105,12 +104,12 @@
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:background="@android:color/black"/>
+            android:background="@android:color/black" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView_speakers"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </LinearLayout>
