--- a/app/src/main/res/layout/fragment_bookmarks.xml
+++ b/app/src/main/res/layout/fragment_bookmarks.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="7dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="7dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_bookmarks"
@@ -10,7 +10,6 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="30dp"
-        android:scrollbars="vertical">
-    </android.support.v7.widget.RecyclerView>
+        android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
