--- a/app/src/main/res/layout/list_locations.xml
+++ b/app/src/main/res/layout/list_locations.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="7dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="7dp">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/locations_swipe_refresh"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/locations_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -16,7 +16,6 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:paddingBottom="30dp"
-            android:scrollbars="vertical">
-        </android.support.v7.widget.RecyclerView>
+            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
