--- a/app/src/main/res/layout/list_speakers.xml
+++ b/app/src/main/res/layout/list_speakers.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/ll_speakers"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_speakers"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/speaker_swipe_refresh"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/speaker_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -17,7 +17,6 @@
             android:layout_height="wrap_content"
             android:clipToPadding="false"
             android:paddingBottom="30dp"
-            android:scrollbars="vertical">
-        </android.support.v7.widget.RecyclerView>
+            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
 </RelativeLayout>
