notification time preference options added

--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -29,7 +29,9 @@
     </group>
     <item android:title="">
         <menu>
-            <item android:title="Settings" />
+            <item
+                android:id="@+id/nav_settings"
+                android:title="Settings" />
             <item android:title="About us" />
         </menu>
     </item>
