--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -3,15 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <PreferenceCategory android:title="@string/settings_mode">
+    <PreferenceCategory android:title="@string/settings_mode_api">
 
         <ListPreference
-            android:defaultValue="@string/default_mode"
-            android:dialogTitle="@string/settings_mode"
+            android:defaultValue="@string/default_mode_api"
+            android:dialogTitle="@string/settings_mode_api"
             android:entries="@array/mode_strings"
             android:entryValues="@array/mode_values"
             android:key="serverurlmode"
-            android:title="@string/settings_mode" />
+            android:title="@string/settings_mode_api" />
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/settings_mode_notification">
+
+        <ListPreference
+            android:defaultValue="@string/default_mode_notification"
+            android:dialogTitle="@string/settings_mode_notification"
+            android:entries="@array/notification_mode_strings"
+            android:entryValues="@array/notification_mode_values"
+            android:key="notification"
+            android:title="@string/settings_mode_notification" />
     </PreferenceCategory>
 
 </PreferenceScreen>
