--- a/app/src/main/res/layout/speakers_item.xml
+++ b/app/src/main/res/layout/speakers_item.xml
@@ -1,5 +1,4 @@
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_tracks"
     android:layout_width="match_parent"
