--- a/app/src/main/res/layout/list_sponsors.xml
+++ b/app/src/main/res/layout/list_sponsors.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/sponsor_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
