--- a/app/src/main/res/layout/list_tracks.xml
+++ b/app/src/main/res/layout/list_tracks.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:padding="7dp">
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tracks_swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
