--- a/app/src/main/res/layout/tracksactvity_item.xml
+++ b/app/src/main/res/layout/tracksactvity_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_tracks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,8 +15,7 @@
         android:layout_marginRight="@dimen/card_margin"
         android:layout_marginTop="@dimen/card_margin_vertical">
 
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/Widget.CardContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
