--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -4,5 +4,9 @@
     <color name="color_primary_dark">#FF8F00</color>
     <color name="color_accent">#FFF8E1</color>
 
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#727272</color>
+    <color name="white">#FFFFFF</color>
     <color name="translucent_grey">#0c000000</color>
+    <color name="grey">#E0E0E0</color>
 </resources>
