FIXED: Search View on Orientation Change #122

--- a/app/src/main/res/menu/menu_bookmarks.xml
+++ b/app/src/main/res/menu/menu_bookmarks.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
+    <item
+        android:id="@+id/share_bookmarks_url"
+        android:icon="@drawable/ic_share_white_24dp"
+        android:title="@string/share"
+        app:showAsAction="collapseActionView|ifRoom" />
 </menu>
