--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="widget_text_size">24dp</dimen>
     <dimen name="sponsor_image_margin">3dp</dimen>
     <dimen name="sponsor_padding">10dp</dimen>
+    <dimen name="speaker_bio_padding">15dp</dimen>
 </resources>
