--- a/app/src/main/res/layout/activity_speakers.xml
+++ b/app/src/main/res/layout/activity_speakers.xml
@@ -1,24 +1,14 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar_speakers"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/color_primary"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?attr/actionBarSize"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -30,108 +20,128 @@
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-
-            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/card_speaker"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                card_view:cardBackgroundColor="@android:color/white"
-                card_view:cardCornerRadius="4dp"
-                card_view:cardElevation="4dp"
-                card_view:cardUseCompatPadding="true">
+                android:layout_height="wrap_content">
 
-                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginTop="2dp"
-                    android:orientation="vertical">
+                <ImageView
+                    android:id="@+id/speaker_image"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="@dimen/speaker_margin"
+                    android:layout_marginTop="?attr/actionBarSize"
+                    app:layout_collapseMode="parallax" />
 
-                    <TextView
-                        android:id="@+id/speaker_bio"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="@dimen/speaker_bio_padding"
-                        android:text="Biography"
-                        android:textColor="#000000"
-                        android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/speaker_bio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/speaker_image"
+                    android:layout_marginBottom="60dp"
+                    android:layout_marginTop="@dimen/speaker_margin"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/speaker_margin"
+                    android:paddingRight="@dimen/speaker_margin"
+                    android:text="Biography"
+                    app:layout_collapseMode="parallax" />
+            </RelativeLayout>
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="end|center_vertical"
-                        android:orientation="horizontal"
-                        android:paddingRight="10dp">
-
-                        <ImageView
-                            android:id="@+id/imageView_linkedin"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_margin="5dp"
-                            android:adjustViewBounds="true"
-                            android:clickable="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/linkedin"
-                            android:tag="@string/linkedin" />
-
-                        <ImageView
-                            android:id="@+id/imageView_twitter"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_margin="5dp"
-                            android:adjustViewBounds="true"
-                            android:clickable="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/twitter"
-                            android:tag="@string/twitter" />
-
-                        <ImageView
-                            android:id="@+id/imageView_fb"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_margin="5dp"
-                            android:adjustViewBounds="true"
-                            android:clickable="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/facebook"
-                            android:tag="@string/fb" />
-
-                        <ImageView
-                            android:id="@+id/imageView_github"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_margin="5dp"
-                            android:adjustViewBounds="true"
-                            android:clickable="true"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/github"
-                            android:tag="@string/github" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-
-            </android.support.v7.widget.CardView>
-
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar_speakers"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
+
     </android.support.design.widget.AppBarLayout>
 
-
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/black" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_speakers"
+    <RelativeLayout
+        android:id="@+id/infoLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?attr/actionBarSize"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:background="@color/color_primary"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <ImageView
+            android:id="@+id/imageView_linkedin"
+            android:layout_width="@dimen/social_image_icon"
+            android:layout_height="@dimen/social_image_icon"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginTop="5dp"
+            android:layout_toLeftOf="@+id/imageView_twitter"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:src="@drawable/linkedin"
+            android:tag="@string/linkedin" />
+
+        <ImageView
+            android:id="@+id/imageView_twitter"
+            android:layout_width="@dimen/social_image_icon"
+            android:layout_height="@dimen/social_image_icon"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginTop="5dp"
+            android:layout_toLeftOf="@+id/imageView_fb"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:src="@drawable/twitter"
+            android:tag="@string/twitter" />
+
+        <ImageView
+            android:id="@+id/imageView_fb"
+            android:layout_width="@dimen/social_image_icon"
+            android:layout_height="@dimen/social_image_icon"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginTop="5dp"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:src="@drawable/facebook"
+            android:tag="@string/fb" />
+
+        <ImageView
+            android:id="@+id/imageView_github"
+            android:layout_width="@dimen/social_image_icon"
+            android:layout_height="@dimen/social_image_icon"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/imageView_fb"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:src="@drawable/github"
+            android:tag="@string/github" />
+
+        <ImageView
+            android:id="@+id/imageView_web"
+            android:layout_width="@dimen/social_image_icon"
+            android:layout_height="@dimen/social_image_icon"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginTop="5dp"
+            android:layout_toRightOf="@+id/imageView_github"
+            android:adjustViewBounds="true"
+            android:clickable="true"
+            android:src="@drawable/ic_domain_black_24dp"
+            android:tag="@string/website" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView_speakers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view"
+            android:background="#fff"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
