Added Support for Native RTL

--- a/app/src/main/res/layout/activity_speakers.xml
+++ b/app/src/main/res/layout/activity_speakers.xml
@@ -41,8 +41,10 @@
                     android:layout_marginBottom="60dp"
                     android:layout_marginTop="@dimen/speaker_margin"
                     android:gravity="center"
+                    android:paddingEnd="@dimen/speaker_margin"
                     android:paddingLeft="@dimen/speaker_margin"
                     android:paddingRight="@dimen/speaker_margin"
+                    android:paddingStart="@dimen/speaker_margin"
                     android:text="Biography"
                     app:layout_collapseMode="parallax" />
             </RelativeLayout>
@@ -72,8 +74,10 @@
             android:layout_height="@dimen/social_image_icon"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginStart="@dimen/speaker_margin"
             android:layout_marginTop="5dp"
             android:layout_toLeftOf="@+id/imageView_twitter"
+            android:layout_toStartOf="@+id/imageView_twitter"
             android:adjustViewBounds="true"
             android:clickable="true"
             android:src="@drawable/linkedin"
@@ -85,8 +89,10 @@
             android:layout_height="@dimen/social_image_icon"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginStart="@dimen/speaker_margin"
             android:layout_marginTop="5dp"
             android:layout_toLeftOf="@+id/imageView_fb"
+            android:layout_toStartOf="@+id/imageView_fb"
             android:adjustViewBounds="true"
             android:clickable="true"
             android:src="@drawable/twitter"
@@ -99,6 +105,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginStart="@dimen/speaker_margin"
             android:layout_marginTop="5dp"
             android:adjustViewBounds="true"
             android:clickable="true"
@@ -111,7 +118,9 @@
             android:layout_height="@dimen/social_image_icon"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginStart="@dimen/speaker_margin"
             android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/imageView_fb"
             android:layout_toRightOf="@+id/imageView_fb"
             android:adjustViewBounds="true"
             android:clickable="true"
@@ -124,7 +133,9 @@
             android:layout_height="@dimen/social_image_icon"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="@dimen/speaker_margin"
+            android:layout_marginStart="@dimen/speaker_margin"
             android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/imageView_github"
             android:layout_toRightOf="@+id/imageView_github"
             android:adjustViewBounds="true"
             android:clickable="true"
