--- a/app/src/main/res/layout/tracksactvity_item.xml
+++ b/app/src/main/res/layout/tracksactvity_item.xml
@@ -11,8 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/card_margin_vertical"
+        android:layout_marginEnd="@dimen/card_margin"
         android:layout_marginLeft="@dimen/card_margin"
         android:layout_marginRight="@dimen/card_margin"
+        android:layout_marginStart="@dimen/card_margin"
         android:layout_marginTop="@dimen/card_margin_vertical">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
