--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -2,8 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:clickable="true"
     android:background="?attr/selectableItemBackground"
+    android:clickable="true"
     android:orientation="vertical">
 
     <LinearLayout
@@ -18,6 +18,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             android:src="@drawable/default_user" />
@@ -26,6 +27,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="vertical">
